yaml/streamsets-agent-service.yaml
# Copyright 2019 Streamsets Inc.
apiVersion: v1
kind: Service
metadata:
  name: streamsets-agent
spec:
  type: NodePort
  ports:
    - name: http
      port: 31864
      protocol: TCP
      targetPort: 18640
  selector:
    name: launcher
