yaml/aks_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: aks-agent-ingress
  labels:
    app : streamsets-agent
spec:
  backend:
    serviceName: streamsets-agent
    servicePort: 31864
  tls:
    - secretName: agenttls
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: streamsets-agent
              servicePort: 31864
          - path: /*
            backend:
              serviceName: streamsets-agent
              servicePort: 31864
