yaml/nginx_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-agent-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.org/ssl-services: streamsets-agent
spec:
  tls:
    - secretName: agenttls
  rules:
    - http:
        paths:
          - path: /agent/(.*)
            backend:
              serviceName: streamsets-agent
              servicePort: 31864
          - path: /agent
            backend:
              serviceName: streamsets-agent
              servicePort: 31864
